--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
+    "multer": "^1.4.5-lts.1",
+    "twilio": "^5.0.3",
     "validator": "^13.11.0"
   }
 }
