--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon node src/index.js"
+    "start": "nodemon node src/index.js",
+    "build": "netlify deploy --prod"
   },
   "author": "ashish",
   "license": "ISC",
@@ -20,6 +21,9 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
+    "netlify-cli": "^17.23.1",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^3.2.0",
     "twilio": "^5.0.3",
     "validator": "^13.11.0"
   }
