--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon node src/index.js"
-
+    "start": "node src/index.js"
   },
   "author": "ashish",
   "license": "ISC",
