--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-status": "^1.7.4",
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
