--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status": "^1.7.4",
@@ -23,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "netlify-cli": "^17.23.1",
     "netlify-lambda": "^2.0.16",
+    "nodemailer": "^6.9.13",
     "serverless-http": "^3.2.0",
     "twilio": "^5.0.3",
     "validator": "^13.11.0"
